infra/apps/stub_tg_link/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: sandbox
  labels:
    app.kubernetes.io/name: stub-tg-link
