infra/apps/stub_tg_link/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: stub-tg-link
  labels:
    app: stub-tg-link
spec:
  replicas: 1
  selector:
    matchLabels:
      app: stub-tg-link
  template:
    metadata:
      labels:
        app: stub-tg-link
    spec:
      containers:
        - name: stub-tg-link
          # default image; CI will replace tag to the commit SHA on push
          image: ghcr.io/cyprus7/ranger-odyssey/stub_tg_link:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
          livenessProbe:
            httpGet:
              path: /tg-link-generate
              port: 3000
            initialDelaySeconds: 10
            periodSeconds: 20
          readinessProbe:
            httpGet:
              path: /tg-link-generate
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 10
